@@ -1,3 +1,7 @@
+2007-08-21 Andreas Otto <andreas.otto@dkd.de>
+
+	* Feature request #5748: Introduced a new TS option that makes indexing of metatags configurable. Adapted code to make use of the new TS option.
+
 2007-07-06  Michael Stucki  <michael@typo3.org>
 
 	* Fix: List of indexed pages could be broken if mutli-byte chars are cut in the middle (patch by Karsten Dambekalns)
